--- a/src/css/Crew.css
+++ b/src/css/Crew.css
@@ -65,6 +65,10 @@
   border-radius: 50%;
 }
 
+.test:hover{
+  border: 0;
+}
+
 .dot:hover {
   background-color: #979797;
   opacity: 17.44;
@@ -73,6 +77,7 @@
   height: 20px;
   margin-right: 10px;
   border-radius: 50%;
-  border: none;
-  text-decoration: none;
+  border: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
