--- a/src/css/Technology.css
+++ b/src/css/Technology.css
@@ -59,14 +59,27 @@
 }
 
 .big-dots {
+}
 
+.test{
+  margin-top: 50%;
+  padding: 0;
+}
+
+.test:hover{
+  border: 0;
+}
+
+.big-dot:hover{
+  border-color: white;
 }
 
 .big-dot{
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
-  background-color: #FFFFFF;
+  border: solid;
+  border-color: #979797;
   text-align: center;
-  color: black;
+  color: white;
 }
